--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <p class="info-text">Click to Open</p>
       </section>
 
-      <div id="card"><h4>💘little coder💘</h4>
+      <div id="card"><h4>💘Gửi em iuu💘</h4>
 
         <img src="bong.jpeg"class="honey">
 
-    <h4>Happy Birthday Make A Wish. Dear brother, hope you receive everything you wish for this year. You deserve the best! Thanks for being such a great brother.💘</h4></div>
+    <h4>💘Em yêu! Vậy là hai ta đã bên nhau được một năm rồi í ạ.Thời gian một năm vừa qua không quá dài nhưng cũng không quá ngắn,và đó là quãng thời gian vô cùng quý giá và hạnh phúc với anh.Nhưng trong thời gian qua anh thật xấu và đáng trách.Anh nhiều lần đã làm công chúa của anh buồn, anh đã làm đôi mắt của công chúa nhuốm nỗi muộn phiền rồi.Anh xin lỗi em.Anh yêu em rất nhiều.. HAPPY ANNIVERSARY💘</h4></div>
     </div>
 </body>
 <script src="canvas.js"></script>
